--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+ul,
+ol {
+    list-style: none;
+}
+
+.App {
+    min-height: 100svh;
+    background: url("./assets/Background-Noise.png") lightgray 0% 0% / 78.125px 78.125px repeat;
+    flex-shrink: 0;
+}
